2010-06-22  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to#14798: Sitename missing in Login form

2010-06-22  Benjamin Mack  <benni@typo3.org>

	* Followup to #14636: Improvements to new Backend skin - small change to the versioning color in the pagetree (Thanks to Steffen Gebert)
	* Updated and formatted NEWS.txt

2010-06-21  Benjamin Mack  <benni@typo3.org>

	* Followup to #14636: Improvements to new Backend skin - Smaller TCEforms changes, RTE styling (Thanks to Steffen Gebert)

2010-06-21  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #14804: Updated extension icons for system extensions (Thanks to Jigal van Hemert)
	* Followup to #10424: Old version (3.x) screenshots in CSH - removed label reference to version 3.6 (Thanks to Philipp Gampe)
	* Fixed bug #14760: Use labels for search in list view (Thanks to Georg Ringer)
	* Fixed bug #14601: Date picker does not work on IRRE elements (Thanks to Steffen Ritter)
	* Added feature #14719: Add ability to use typo3conf/FIRST_INSTALL to temporarily enable the Install Tool and allow an easier first install.

2010-06-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14799: htmlArea RTE: Color dialogue may raise a js error in IE
	* Updated htmlArea RTE version to 2.0.2
	* Fixed bug #14793: htmlArea RTE: Problematic icons in IE6
	* Fixed bug #14812: htmlArea RTE: Path to acronym record icon is not correct (Thanks to Helmut Hummel)

2010-06-21  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8893: eval "timesec" sets seconds to zero (Thanks to Ralf Hettinger and Andy Grunwald)

2010-06-21  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14514: Long lines in module menu are unreadable
	* Fixed bug #14798: Sitename missing in Login form
	* Fixed bug #14752: Add Update Wizards for Skinning Changes (Thanks to Jigal van Hemert)
	* Fixed bug #14800: JS errors prevent JS pased popups from working in IE (Thanks to Jo Hasenau)