@@ -29,7 +29,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearCacheOnLoad' => 0,
 	'lockType' => '',
 	'author_company' => '',
-	'version' => '1.2.0RC1',
+	'version' => '1.2.0',
 	'constraints' => array(
 		'depends' => array(
 			'extbase' => '',
